--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.brianchan.ripple_android.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.example.brianchan.ripple_android.RippleFont
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/app_name"
+        android:textColor="@color/colorAccent"
+        android:textSize="60sp"
+        android:gravity="center"
+        android:id="@+id/logo"/>
 </RelativeLayout>
