--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#345470</color>
+    <color name="colorPrimaryDark">#2C4758</color>
+    <color name="colorDark">#172935</color>
+    <color name="colorAccent">#02B3E4</color>
 </resources>
