--- a/app/src/main/res/layout/activity_spotify_auth.xml
+++ b/app/src/main/res/layout/activity_spotify_auth.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_spotify_auth"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.brianchan.ripple_android.MainActivity">
+    tools:context="com.example.brianchan.ripple_android.SpotifyAuthActivity">
 
     <com.example.brianchan.ripple_android.RippleFont
         android:layout_width="match_parent"
@@ -19,8 +19,16 @@
         android:gravity="center"
         android:id="@+id/logo"/>
 
+    <TextView
+        android:text="Logged in as: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView" />
+
     <Button
-        android:text="Start"
+        android:text="Create Party"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -28,6 +36,6 @@
         android:layout_marginBottom="52dp"
         android:textColor="@drawable/button_text_color"
         android:background="@drawable/custom_button"
-        android:onClick="spotifyAuth"/>
+        android:onClick="startParty"/>
 
 </RelativeLayout>
