--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.brianchan.ripple_android.MainActivity">
 
-    <com.example.brianchan.ripple_android.RippleFont
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/colorAccent"
-        android:textSize="60sp"
-        android:gravity="center"
-        android:id="@+id/logo"/>
-
     <Button
         android:text="Start"
         android:layout_width="match_parent"
@@ -29,5 +20,17 @@
         android:textColor="@drawable/button_text_color"
         android:background="@drawable/custom_button"
         android:onClick="spotifyAuth"/>
+
+    <com.example.brianchan.ripple_android.RippleFont
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/colorAccent"
+        android:textSize="70sp"
+        android:gravity="center"
+        android:id="@+id/logo"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
