--- a/app/src/main/res/layout/fragment_songlist.xml
+++ b/app/src/main/res/layout/fragment_songlist.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:text="Previously Played Songs:"
+        android:textSize="15sp"
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -19,7 +20,8 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/section_label"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimaryDark"
         android:id="@+id/historyList"/>
 
 </RelativeLayout>
