--- a/app/src/main/res/layout/song_view.xml
+++ b/app/src/main/res/layout/song_view.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="80dip" >
+    android:layout_height="50sp" >
 
     <ImageView
         android:id="@+id/ImageCity"
-        android:layout_width="90sp"
-        android:layout_height="90sp" />
+        android:layout_width="80sp"
+        android:layout_height="80sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -16,16 +16,23 @@
         android:paddingLeft="10sp">
 
         <TextView
-            android:id="@+id/cityName"
+            android:id="@+id/songName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp" />
+            android:textSize="20sp"
+            android:maxLines="1" />
 
         <TextView
-            android:id="@+id/cityLinkWiki"
+            android:id="@+id/authorName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:autoLink="web"
+            android:textSize="15sp" />
+            <!--android:autoLink="web"-->
+
+        <TextView
+            android:id="@+id/albumName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:textSize="15sp" />
     </LinearLayout>
 </RelativeLayout>
