--- a/app/src/main/res/layout/activity_start_party.xml
+++ b/app/src/main/res/layout/activity_start_party.xml
@@ -20,12 +20,11 @@
         android:id="@+id/logo"/>
 
     <TextView
-        android:text="Logged in as: ADD SPOTIFY STUFF PLZ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView" />
+        android:id="@+id/logintext" />
 
     <Button
         android:text="Create Party"
