--- a/app/src/main/res/layout/fragment_historylist.xml
+++ b/app/src/main/res/layout/fragment_historylist.xml
@@ -15,7 +15,7 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/section_label"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
