--- a/app/src/main/res/layout/song_view.xml
+++ b/app/src/main/res/layout/song_view.xml
@@ -20,19 +20,20 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:maxLines="1" />
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/authorName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp" />
-            <!--android:autoLink="web"-->
+            android:textSize="15sp"
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/albumName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:maxLines="1"/>
     </LinearLayout>
 </RelativeLayout>
