Added notification support

--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -16,10 +16,12 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/section_label"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/playPause"
         android:background="@color/colorPrimaryDark"
         android:id="@+id/playlist"/>
 
@@ -27,9 +29,9 @@
         android:id="@+id/playPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/playlist"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="45dp"
         android:text="Play/Pause"
         android:onClick="toggle" />
 
