--- a/app/src/main/res/layout/fragment_historylist.xml
+++ b/app/src/main/res/layout/fragment_historylist.xml
@@ -19,6 +19,7 @@
         android:layout_below="@+id/section_label"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
         android:background="@color/colorPrimaryDark"
         android:id="@+id/historyList"/>
 
