--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Skip"
+        android:onClick="skip"
         android:layout_marginRight="47dp"
         android:layout_marginEnd="47dp"
         android:layout_below="@+id/playlist"
