--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,5 +8,9 @@
         <item name="android:colorBackground">@color/colorPrimary</item>
         <item name="android:typeface">monospace</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorPrimaryInverse">@android:color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColorSecondaryInverse">@color/white</item>
     </style>
 </resources>
