--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#2C4758</color>
     <color name="colorDark">#172935</color>
     <color name="colorAccent">#02B3E4</color>
+    <color name="white">#FFFFFF</color>
 </resources>
