--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -26,12 +26,12 @@
         android:background="@color/colorPrimaryDark"
         android:id="@+id/playlist"/>
 
-    <Button
+    <com.example.brianchan.ripple_android.BtnFonts
         android:id="@+id/playPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Play/Pause"
+        android:text="@string/play_icon"
         android:onClick="toggle"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -39,11 +39,11 @@
         android:layout_marginLeft="50dp"
         android:layout_marginStart="47dp" />
 
-    <Button
+    <com.example.brianchan.ripple_android.BtnFonts
         android:id="@+id/skipButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skip"
+        android:text="@string/skip_icon"
         android:onClick="skip"
         android:layout_marginRight="50dp"
         android:layout_marginEnd="47dp"
