--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="16dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -15,13 +15,15 @@
     <com.example.brianchan.ripple_android.BtnFonts
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
         android:background="@drawable/custom_button"
         android:onClick="connect"
         android:text="@string/spotify_icon"
-        android:textColor="@drawable/button_text_color" />
+        android:textColor="@drawable/button_text_color"
+        android:id="@+id/btnFonts"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="232dp" />
 
     <com.example.brianchan.ripple_android.RippleFont
         android:layout_width="match_parent"
@@ -31,7 +33,7 @@
         android:textSize="70sp"
         android:gravity="center"
         android:id="@+id/logo"
-        android:layout_centerVertical="true"
+        android:layout_above="@+id/btnFonts"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
