--- a/app/src/main/res/layout/activity_start_party.xml
+++ b/app/src/main/res/layout/activity_start_party.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_spotify_auth"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="16dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="16dp"
     tools:context="com.example.brianchan.ripple_android.StartPartyActivity">
 
     <com.example.brianchan.ripple_android.RippleFont
@@ -17,24 +17,47 @@
         android:textColor="@color/colorAccent"
         android:textSize="60sp"
         android:gravity="center"
-        android:id="@+id/logo"/>
+        android:id="@+id/logo"
+        android:layout_above="@+id/party"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="@string/what_is_a_party"
+        android:id="@+id/party"
+        android:layout_above="@+id/party_description"
+        android:layout_centerHorizontal="true" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="@string/party_description"
+        android:id="@+id/party_description"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/logintext" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <!--android:layout_alignParentBottom="true"-->
+    <!--&lt;!&ndash;android:layout_alignParentLeft="true"&ndash;&gt;-->
+    <!--android:layout_alignParentStart="true"-->
 
     <Button
-        android:text="Create Party"
+        android:text="Create a Party"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
         android:textColor="@drawable/button_text_color"
         android:background="@drawable/custom_button"
-        android:onClick="startParty"/>
+        android:onClick="startParty"
+        android:id="@+id/createParty"
+        android:layout_below="@+id/party_description"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp" />
 
 </RelativeLayout>
