--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/pressed_button"
-        android:color="@color/colorPrimary" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/btnFill" />
+    <corners android:radius="30dp" />
+    <stroke android:width="18px" android:color="@color/btnBorder" />
+</shape>
 
-    <item android:drawable="@drawable/border_button" />
-</selector>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+    <!--<item android:state_pressed="true"-->
+    <!--android:drawable="@drawable/pressed_button"-->
+    <!--android:color="@color/colorPrimary" />-->
+
+    <!--<item android:drawable="@drawable/border_button" />-->
+    <!--</selector>-->
