--- a/app/src/main/res/drawable/pressed_button.xml
+++ b/app/src/main/res/drawable/pressed_button.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/btnBorder" />
     <corners android:radius="30dp" />
+    <stroke android:width="18px" android:color="@color/btnBorder" />
 </shape>
