--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/rsz_test4"
     tools:context="com.example.brianchan.ripple_android.AuthActivity">
@@ -20,6 +20,7 @@
         android:text="@string/spotify_icon"
         android:textColor="@drawable/button_text_color"
         android:id="@+id/btnFonts"
+        android:textSize="17sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
