--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.brianchan.ripple_android.PasscodeActivity">
 
@@ -17,52 +17,59 @@
         android:textColor="@color/colorAccent"
         android:textSize="60sp"
         android:gravity="center"
-        android:id="@+id/logo"/>
+        android:id="@+id/logo"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="14dp" />
 
-    <Button
-        android:text="Enter Party"
+    <com.example.brianchan.ripple_android.BtnFonts
+        android:text="@string/enter_party_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@drawable/button_text_color"
         android:background="@drawable/custom_button"
         android:id="@+id/enterButton"
-        android:layout_above="@+id/inviteButton"
+        android:textSize="17sp"
+        android:onClick="enterParty"
+        android:layout_below="@+id/passcodeText"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="30dp"
-        android:onClick="enterParty"/>
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Invite Friends"
+    <com.example.brianchan.ripple_android.BtnFonts
+        android:text="@string/share_passcode_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
         android:textColor="@drawable/button_text_color"
         android:background="@drawable/custom_button"
         android:id="@+id/inviteButton"
-        android:layout_alignParentBottom="true"
+        android:textSize="17sp"
+        android:onClick="sendSMS"
+        android:layout_alignTop="@+id/enterButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="sendSMS"/>
+        android:layout_marginTop="65dp" />
 
     <TextView
         android:text="Your Passcode is:"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:layout_marginBottom="50dp"
         android:layout_above="@+id/passcodeText"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="1234"
-        android:layout_width="200sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
-        android:textSize="60sp"
+        android:textStyle="bold"
+        android:textSize="90sp"
         android:gravity="center"
         android:id="@+id/passcodeText"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/passcode_back"/>
+        android:layout_centerHorizontal="true" />
+        <!--android:background="@drawable/passcode_back"/>-->
+
 </RelativeLayout>
