--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -57,8 +57,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
         android:layout_above="@+id/passcodeText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignRight="@+id/passcodeText"
+        android:layout_alignEnd="@+id/passcodeText"
+        android:layout_marginRight="13dp"
+        android:layout_marginEnd="13dp" />
 
     <TextView
         android:text="1234"
