--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -12,12 +12,12 @@
     tools:context="com.example.brianchan.ripple_android.AuthActivity">
 
 
-    <com.example.brianchan.ripple_android.BtnFonts
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:onClick="connect"
-        android:text="@string/spotify_icon"
+        android:text="Connect with Spotify"
         android:textColor="@drawable/button_text_color"
         android:id="@+id/btnFonts"
         android:textSize="17sp"
@@ -37,23 +37,5 @@
         android:layout_above="@+id/btnFonts"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="130dp"
-        android:layout_marginRight="130dp"
-        android:layout_marginTop="74dp"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"
-        android:maxLines="1"
-        android:text="this text view is too long" />
 
 </RelativeLayout>
