--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="14dp" />
 
-    <com.example.brianchan.ripple_android.BtnFonts
+    <Button
         android:text="@string/enter_party_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <com.example.brianchan.ripple_android.BtnFonts
+    <Button
         android:text="@string/share_passcode_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,6 +59,7 @@
         android:layout_above="@+id/passcodeText"
         android:layout_alignRight="@+id/passcodeText"
         android:layout_alignEnd="@+id/passcodeText"
+        android:layout_centerHorizontal="true"
         android:layout_marginRight="13dp"
         android:layout_marginEnd="13dp" />
 
