--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/rsz_test4"
+    android:background="@drawable/final_test4"
     tools:context="com.example.brianchan.ripple_android.AuthActivity">
 
 
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:onClick="connect"
-        android:text="Connect with Spotify"
+        android:text="@string/spotify_icon"
         android:textColor="@drawable/button_text_color"
         android:id="@+id/btnFonts"
         android:textSize="17sp"
