--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -11,7 +11,9 @@
         android:orientation="vertical"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/album_border">
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignParentTop="true"
+        android:layout_margin="20dp">
 
         <ImageView
             android:id="@+id/albumArt"
@@ -22,8 +24,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/top_bottom_border">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/songRequest"
@@ -58,32 +59,36 @@
                 android:text="Author"
                 android:textSize="20sp" />
 
+            <LinearLayout
+                android:id="@+id/acceptReject"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorPrimaryDark"
+                android:orientation="horizontal"
+                android:padding="3dp">
+
+                <Button
+                    android:id="@+id/rejectButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:text="Reject"
+                    android:textColor="@drawable/button_text_color" />
+
+                <Button
+                    android:id="@+id/acceptButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/custom_button"
+                    android:text="Accept"
+                    android:textColor="@drawable/button_text_color" />
+
+            </LinearLayout>
+
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/acceptReject"
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/songInfo"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_centerHorizontal="true">
-
-        <Button
-            android:id="@+id/rejectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Reject" />
-
-        <Button
-            android:id="@+id/acceptButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Accept" />
 
     </LinearLayout>
 
