--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -11,6 +11,15 @@
     android:background="@drawable/final_test4"
     tools:context="com.example.brianchan.ripple_android.AuthActivity">
 
+    <com.example.brianchan.ripple_android.RippleFont
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/colorAccent"
+        android:textSize="70sp"
+        android:gravity="center"
+        android:id="@+id/logo"
+        android:layout_centerVertical="true"/>
 
     <Button
         android:layout_width="match_parent"
@@ -20,22 +29,7 @@
         android:text="@string/spotify_icon"
         android:textColor="@drawable/button_text_color"
         android:id="@+id/btnFonts"
-        android:textSize="17sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="232dp" />
-
-    <com.example.brianchan.ripple_android.RippleFont
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/colorAccent"
-        android:textSize="70sp"
-        android:gravity="center"
-        android:id="@+id/logo"
-        android:layout_above="@+id/btnFonts"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/logo"
+        android:textSize="17sp"/>
 
 </RelativeLayout>
